[EOFR-3214]: UEX: Sticky Footer due now and due monthly are not aligned properly, wrapping issue with zoom/resolution

--- a/stylesheet/sass/utility.scss
+++ b/stylesheet/sass/utility.scss
@@ -539,8 +539,13 @@ a.underline {
 
 .circle {
 	border-radius: 30px;
-	padding: 10px 18px !important;
-	font-size: 26px;
+	padding: 0 8px !important;
+	font-size: 20px;
+	margin-top: 5px;
+
+	& + div {
+		font-size: 14px;
+	}
 }
 
 .italics {
